# john

./: .gitignore  CONVENTIONS.md  README.md
src/john_controls/: CMakeLists.txt  README.md  package.xml
src/john_controls/config/: thruster_config.yaml  thruster_config_triton_mini.yaml
src/john_controls/include/john_controls/: thrust_allocator.hpp
src/john_controls/launch/: thrust_allocator.launch.py  thrust_allocator_launch.py
src/john_controls/src/: thrust_allocator.cpp
src/john_controls/test/: test_thrust_allocator_launch.py
src/john_controls/test/config/: test_thruster_simple_config.yaml
src/john_drivers/: CMakeLists.txt  package.xml
src/john_drivers/include/john_drivers/: serial_subscriber.hpp
src/triton_mission_planner/: trajectory_generator.cpp  waypoint_marker.cpp  waypoint_marker_tester.py
